--- a/style.css
+++ b/style.css
@@ -1,111 +1,148 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
+    flex-direction: column;
+    align-items: stretch;
     font-family: Arial, sans-serif;
+    font-size: 18px;
     background-color: #f8f8f8;
     color: #333;
+    min-width: 1000px;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.card {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 
 #navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
+    padding: 1rem 2rem;
     background-color: #4caf50;
-    color: white;
 }
 
 #navbar .title {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     text-decoration: none;
     color: white;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+#navbar .title:hover {
+    color: #4caf50;
+    box-shadow: inset 200px 0 0 0 #fff;;
 }
 
 .nav-links {
-    list-style: none;
     display: flex;
+    flex-grow: 1;
+    justify-content: end;
 }
 
-.nav-links li a {
+.nav-links a {
     text-decoration: none;
     color: white;
-    margin-right: 15px;
+    margin-right: 1rem;
+}
+
+.nav-links a:hover {
+    text-decoration: underline;
 }
 
 .section {
-    padding: 50px 20px;
+    padding: 3rem 2rem;
     text-align: center;
 }
 
 .section-title {
-    font-size: 50px;
-    margin-bottom: 20px;
+    font-size: 3rem;
+    margin-bottom: 2rem;;
 }
 
 #hero {
-    display: flex;
-    flex-direction: column;
+    height: 30rem;
+    padding: 3rem 0;
+    text-align: center;
+    background-image: url("./static/cats.jpg");
+    background-size: auto 100%;
     align-items: center;
+    margin-top: -2rem; /*no gap*/
 }
 
 .hero-tagline {
-    font-size: 70px;
+    font-size: 80px;
     font-weight: bold;
-    margin-bottom: 20px;
-
-}
-
-.vp-reasons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+    color: white;
+    backdrop-filter: blur(10px) brightness(60%);
+    padding: 3rem;
 }
 
 .vp-reason {
-    background: white;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #4caf50;
+    color: white;
+    padding: 1rem;
     max-width: 250px;
-    text-align: center;
     flex-grow: 1;
-    flex-basis: 0;
+}
+
+.img {
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.vp-img {
+    filter: invert(1);
 }
 
 #call-to-action {
     background-color: #c0eebb;
-    margin: 0 10px;
-    border-radius: 5px;
+    width: 80%;
+    align-self: center;
 }
 
 .cta-button a {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 1rem 3rem;
     background: #4caf50;
     color: white;
     text-decoration: none;
+    font-size: 2rem;
     border-radius: 5px;
+    transition-duration: 0.3s;
 }
 
-.reviews {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+.cta-button a:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    transition-duration: 0.3s;
 }
 
 .review {
-    background: white;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
     max-width: 250px;
-    text-align: center;
     flex-grow: 1;
-    flex-basis: 0;
+}
+
+#contact {
+    width: 30%;
+    align-self: center;
+    flex-direction: column;
+    gap: 0.5rem;
+    background-color: white;
+    margin-bottom: 2rem;
 }
 
 .contact-info {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
+    padding: 0.3rem;
+}
+
+.contact-info-name, .review-name {
+    font-weight: bold;
 }
