--- a/style.css
+++ b/style.css
@@ -146,3 +146,49 @@ body {
 .contact-info-name, .review-name {
     font-weight: bold;
 }
+
+
+.mascot {
+    position: fixed;
+    z-index: 999;
+    width: 10rem;
+    height: 10rem;
+    animation: fadeInOut 6s ease-in;
+}
+
+.mascot img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease;
+    filter: drop-shadow( rgba(0, 0, 0, 0.3) 2px 2px 10px);
+}
+
+.mascot:hover img {
+    transform: scale(1.1);
+}
+ 
+.bottom-right {
+    bottom: 3rem;
+    right: 1rem;
+}
+
+.mascot-message {
+    text-align: center;
+    background-color: #4caf50;
+    color: white;
+    padding: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    margin-bottom: 1rem;
+}
+
+
+.mascot:hover .mascot-message {
+    opacity: 1;
+}
+
+@keyframes fadeInOut {
+    0% { opacity: 0; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
