--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-size: 18px;
     background-color: #f8f8f8;
     color: #333;
-    min-width: 1000px;
+    /* min-width: 1000px; */
 }
 
 .flex-container {
@@ -90,6 +90,7 @@ body {
     padding: 1rem;
     max-width: 250px;
     flex-grow: 1;
+    flex-basis: 0;
 }
 
 .img {
@@ -128,6 +129,7 @@ body {
     padding: 1rem;
     max-width: 250px;
     flex-grow: 1;
+    flex-basis: 0; 
 }
 
 #contact {
@@ -197,4 +199,45 @@ body {
     0% { translate: 0px -10px; }
     50% { translate: 0px 0px; }
     100% { translate: 0px -10px; }
+}
+
+
+@media (max-width: 800px) {
+    .vp-reasons {
+        flex-direction: column;
+        align-items: center;
+    }
+    .reviews {
+        flex-direction: column;
+        align-items: center;
+    }
+    #contact {
+        width: 80%;
+    }
+    .mascot {
+        width: 5rem;
+        height: 5rem;
+    }
+    .bottom-right {
+        bottom: 6rem;
+        right: 1rem;
+    }
+    #call-to-action {
+        height: 0;
+        padding: 0;
+    }
+    #call-to-action .section-title {
+        display: none;
+    }
+    .cta-button a {
+        position: fixed;
+        bottom: 2rem;
+        left: 2rem;
+        font-size: 1rem;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .nav-links {
+        display: none;
+    }
 }
