--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     font-size: 18px;
     background-color: #f8f8f8;
     color: #333;
-    /* min-width: 1000px; */
 }
 
 .flex-container {
@@ -189,6 +188,15 @@ body {
     opacity: 1;
 }
 
+/* Only for mobile */
+.menu-checkbox {
+    display: none;
+}
+  
+.menu-icon {
+    display: none;
+}
+
 @keyframes fadeIn {
     0% { opacity: 0; }
     50% { opacity: 0; }
@@ -237,7 +245,40 @@ body {
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     }
 
+    .menu-icon {
+        display: block;
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
+    
     .nav-links {
         display: none;
+
+        position: absolute;
+        top: 3rem;
+        right: 2rem;
+        z-index: 10;
+
+        width: 15rem;
+        height: 7rem;
+
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        
+        background-color: white;
+        color: black;
+
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+    }
+    
+    .nav-links a {
+        color: black;
+    }
+
+    .menu-checkbox:checked + .menu-icon + .nav-links {
+        display: flex;
     }
 }
